Niad-3114: Populate the "no disclosure to patient" label for Laboratory related resources (#751)
* initial changes

* adding tests

* nopat for specimen and adding tests

* diagnostic report NOPAT

* adding more tests

* Update gp2gp-translator/src/test/java/uk/nhs/adaptors/pss/translator/mapper/diagnosticreport/SpecimenMapperTest.java

Co-authored-by: martin-nhs <127403254+martin-nhs@users.noreply.github.com>

* adding test for nopat narrative statement

* code cleanup

* changelog update

* Update CHANGELOG.md

Co-authored-by: martin-nhs <127403254+martin-nhs@users.noreply.github.com>

* optimization using method reference

* pr review fixes

* code refactoring

---------

Co-authored-by: martin-nhs <127403254+martin-nhs@users.noreply.github.com>